[package]
name = "RayBNN_Neural"
version = "2.0.3"
authors = ["Brosnan Yuen <brosnanyuen@gmail.com>"]
edition = "2021"
description = "Neural Networks with Sparse Weights in Rust using GPUs, CPUs, and FPGAs via CUDA, OpenCL, and oneAPI"
readme = "README.md"
repository = "https://github.com/BrosnanYuen/RayBNN_Neural"
keywords = ["deep-learning", "machine-learning", "neural-networks","CUDA","OpenCL"]
license = "GPL-3.0-only"
categories = ["science"]
exclude = ["test_data/"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
half = { version = "2.4.1" , features = ["num-traits"] }
RayBNN_DataLoader = "2.0.3"
RayBNN_Graph = "2.0.3"
RayBNN_Sparse = "2.0.2"
RayBNN_Optimizer = "2.0.1"
rand = "0.8.5"
nohash-hasher = "0.2.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"

[dev-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
half = { version = "2.4.1" , features = ["num-traits"] }
RayBNN_DataLoader = "2.0.3"
RayBNN_Graph = "2.0.3"
RayBNN_Sparse = "2.0.2"
RayBNN_Optimizer = "2.0.1"
rand = "0.8.5"
nohash-hasher = "0.2.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"

[build-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
half = { version = "2.4.1" , features = ["num-traits"] }
RayBNN_DataLoader = "2.0.3"
RayBNN_Graph = "2.0.3"
RayBNN_Sparse = "2.0.2"
RayBNN_Optimizer = "2.0.1"
rand = "0.8.5"
nohash-hasher = "0.2.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"

[lib]
name = "RayBNN_Neural"
path = "src/lib.rs"




